VR: Fix race firing displayactivate

There was a race between blink getting focus and letting us know the
page is listening for activate, and the browser firing displayactivate
on Android. This CL remembers the last display that was listening for
activate, and sends displayactivate to that display if there are no
better candidates to send the displayactivate to.

Bug: 774211
Change-Id: I566babd6139769b7b2cadeece9b3e889f81fd237
Reviewed-on: https://chromium-review.googlesource.com/716806
Reviewed-by: Yash Malik <ymalik@chromium.org>
Commit-Queue: Michael Thiessen <mthiesse@chromium.org>
Cr-Commit-Position: refs/heads/master@{#508521}
Former-commit-id: 37845e0f35e8801b7133c0e82262195778725f1a