device/vr/vr_device.cc
@@ -29,6 +29,8 @@ void VRDevice::RemoveDisplay(VRDisplayImpl* display) {
   displays_.erase(display);
   if (listening_for_activate_diplay_ == display)
     listening_for_activate_diplay_ = nullptr;
+  if (last_listening_for_activate_diplay_ == display)
+    last_listening_for_activate_diplay_ = nullptr;
 }
 
 bool VRDevice::IsAccessAllowed(VRDisplayImpl* display) {
@@ -60,6 +62,9 @@ void VRDevice::OnActivate(mojom::VRDisplayEventReason reason,
                           const base::Callback<void(bool)>& on_handled) {
   if (listening_for_activate_diplay_) {
     listening_for_activate_diplay_->OnActivate(reason, on_handled);
+  } else if (last_listening_for_activate_diplay_ &&
+             last_listening_for_activate_diplay_->InFocusedFrame()) {
+    last_listening_for_activate_diplay_->OnActivate(reason, on_handled);
   } else {
     std::move(on_handled).Run(true /* will_not_present */);
   }
@@ -91,6 +96,7 @@ void VRDevice::UpdateListeningForActivate(VRDisplayImpl* display) {
   if (display->ListeningForActivate() && display->InFocusedFrame()) {
     listening_for_activate_diplay_ = display;
   } else if (listening_for_activate_diplay_ == display) {
+    last_listening_for_activate_diplay_ = listening_for_activate_diplay_;
     listening_for_activate_diplay_ = nullptr;
   }
   OnListeningForActivateChanged(!!listening_for_activate_diplay_);
